--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "dependencies": {
         "@primeuix/themes": "^1.0.0",
         "chart.js": "3.3.2",
+        "dotenv": "^16.4.7",
+        "pinia": "^3.0.1",
         "primeicons": "^7.0.0",
         "primevue": "^4.3.1",
         "tailwindcss-primeui": "^0.5.0",
@@ -29,6 +31,6 @@
         "sass": "^1.55.0",
         "tailwindcss": "^3.4.6",
         "unplugin-vue-components": "^0.27.3",
-        "vite": "^5.3.1"
+        "vite": "^6.2.5"
     }
 }
